--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,21 @@
 # suppress inspection "UnusedProperty" for whole file
-
+# the application itself
+server.port=8080
+spring.datasource.platform=h2
+spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sasuke
+spring.datasource.password=sasuke
+spring.datasource.driver-class-name=org.h2.Driver
+## Hibernate configuration
+spring.jpa.database=H2
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.show-sql=true
 logging.level.org.springframework=WARN
 logging.level.org.hibernate=WARN
 logging.level.com.hendisantika=DEBUG
-spring.freemarker.template-loader-path=/WEB-INF/ftl
+spring.freemarker.template-loader-path=classpath:/templates/
+spring.freemarker.suffix=.ftlh
 spring.freemarker.expose-request-attributes=true
 spring.freemarker.expose-spring-macro-helpers=true
